# melado

./: .gitignore  .pyre_configuration  .readthedocs.yml  Makefile  README.md  pyproject.toml  pyrightconfig.json  start
.github/workflows/: release.yml  test.yml
docs/: authors.md  conf.py  index.md  requirements.txt
docs/_build/doctrees/: authors.doctree  backup_index.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  authors.html  backup_index.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: backup_index.rst.txt  index.md.txt
docs/reference/: melado.linear.adaline.rst  melado.linear.logistic.rst  melado.linear.perceptron.rst  melado.linear.regression.rst  melado.linear.rst  melado.rst  melado.utils.activation.rst  melado.utils.encoding.rst  melado.utils.error.rst  melado.utils.rst  modules.rst
melado/: __init__.py
melado/linear/: __init__.py  adaline.py  logistic.py  perceptron.py  regression.py
melado/utils/: __init__.py  activation.py  encoding.py  error.py  linear_space.py  linear_sys.py
tests/: test_encoder.py  test_linear_regression.py  test_logistic_regression.py  test_perceptron.py
