[tool.poetry]
name = "melado"
version = "0.1.0"
description = ""
authors = ["Luiz Mugnaini <luizmugnaini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.24"
nptyping = "^2.5.0"

[tool.poetry.group.dev.dependencies]
# Formatting, linting and type-checking
mypy = "^1.5.1"
black = "^23.3.0"
ruff = "^0.0.275"

# Testing
pytest = "^7.4.0"
pandas = "^2.0.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"

# Documentation
# I genuinely do not remember why tomli would be needed...
# tomli = "^2.0.1"
sphinx = "^7.0.1"
furo = "^2023.5.20"
myst-parser = "^2.0.0"

# Publication
setuptools = "^68.0.0"
wheel = "^0.40.0"
twine = "^4.0.2"

# Notebooks
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 101

[tool.ruff]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.pyright]
venv = ".venv"
ignore = ["tests"]
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedVariable = false
